--- a/style.css
+++ b/style.css
@@ -36,3 +36,27 @@
   width: 200px;
   margin: auto;
 }
+
+.health-bar-player,
+.health-bar-enemy {
+  position: relative;
+  width: 300px;
+  height: 40px;
+  border: 1px solid #000000;
+}
+
+.health-bar-fill {
+  height: 100%;
+  background: rgb(40, 202, 40);
+  transition: width 0.5s;
+}
+
+.health-bar-value {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+}
