--- a/style.css
+++ b/style.css
@@ -36,3 +36,9 @@
   width: 200px;
   margin: auto;
 }
+button:disabled,
+button[disabled] {
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+}
